langtools/test/tools/javac/proprietary/WarnMethod.out
WarnMethod.java:15:36: compiler.warn.sun.proprietary: sun.misc.VM
- compiler.err.warnings.and.werror
1 error
1 warning
